@@ -65,14 +65,17 @@ AC_DEFUN([GROFF_PRINT], [
 
 # Bison-generated parsers have problems with C++ compilers other than
 # g++.  Thus, byacc is preferred over bison.  If no yacc program is
-# available, we issue an error only if building from Git, because files
-# generated by a yacc are already present in the distribution archive.
+# available, we issue an error only if not building from a distribution
+# archive, because files generated by a yacc are already present there.
 
 AC_DEFUN([GROFF_PROG_YACC], [
   AC_CHECK_PROGS([YACC], [byacc 'bison -y' yacc], [missing])
-  if test "$YACC" = missing && test -d "$srcdir"/.git
+  if ! test -f "$srcdir"/.tarball-version
   then
-    AC_MSG_ERROR([could not find 'byacc', 'bison', or 'yacc'], 1)
+    if test "$YACC" = missing
+    then
+      AC_MSG_ERROR([could not find 'byacc', 'bison', or 'yacc'], 1)
+    fi
   fi
 ])
 
@@ -101,7 +104,7 @@ AC_DEFUN([GROFF_PROG_M4], [
 # The minor version checking logic is present for future needs.
 
 AC_DEFUN([GROFF_MAKEINFO], [
-  if test -d "$srcdir"/.git
+  if ! test -f "$srcdir"/.tarball-version
   then
   # By default automake will set MAKEINFO to MAKEINFO = ${SHELL} <top
   # src dir>/build-aux/missing makeinfo.  As we need a more precise
@@ -150,7 +153,7 @@ AC_DEFUN([GROFF_MAKEINFO], [
 # is too old, the latter is too.
 
 AC_DEFUN([GROFF_TEXI2DVI], [
-  if test -d "$srcdir"/.git
+  if ! test -f "$srcdir"/.tarball-version
   then
     AC_REQUIRE([GROFF_MAKEINFO])
     AC_CHECK_PROG([PROG_TEXI2DVI], [texi2dvi], [texi2dvi], [missing])
